Alternating LibLoad and LibFree crashes BGE #40555

Closed
opened 2014-06-09 18:35:15 +02:00 by iPLEOMAX · 20 comments
iPLEOMAX commented 2014-06-09 18:35:15 +02:00 (Migrated from localhost:3001)

System Information
Windows 8 64-bit
Intel i3 3.4Ghz
AMD HD5650

Blender Version
Broken: 2.71-testbuild2
Worked: Never

This code will crash, even with delays:

library = logic.expandPath('//lib.blend')
logic.LibLoad(library, 'Scene')
logic.LibFree(library)
logic.LibLoad(library, 'Scene')
logic.LibFree(library)

Exact steps for others to reproduce the error

  1. Create a lib.blend file with a cube
  2. Create a new blend file, paste the above script and attach it to something
  3. Hit P.

Was already reported and marked as solved, but this bug still exists.
https://developer.blender.org/T40199

**System Information** Windows 8 64-bit Intel i3 3.4Ghz AMD HD5650 **Blender Version** Broken: 2.71-testbuild2 Worked: Never This code will crash, even with delays: ``` library = logic.expandPath('//lib.blend') logic.LibLoad(library, 'Scene') logic.LibFree(library) logic.LibLoad(library, 'Scene') logic.LibFree(library) ``` **Exact steps for others to reproduce the error** 1) Create a lib.blend file with a cube 2) Create a new blend file, paste the above script and attach it to something 3) Hit P. Was already reported and marked as solved, but this bug still exists. https://developer.blender.org/T40199
iPLEOMAX commented 2014-06-09 18:35:15 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
iPLEOMAX commented 2014-06-09 18:35:15 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @iPLEOMAX

Added subscriber: @iPLEOMAX
Author

#43224 was marked as duplicate of this issue

#43224 was marked as duplicate of this issue
Author

#42167 was marked as duplicate of this issue

#42167 was marked as duplicate of this issue
iPLEOMAX commented 2014-06-09 18:40:58 +02:00 (Migrated from localhost:3001)
Author

Added demonstration file.

Added demonstration file.

Added subscriber: @raco

Added subscriber: @raco

It seems the crash occurs only when freeing objects that were loaded and freed once or more.
I can confirm that this also happens with LibNews of (inactive) objects, LibLoaded or not.

Edit: I was wrong. The crash occurs WHEN LOADING objects that were freed once or more.

It seems the crash occurs only when freeing objects that were loaded and freed once or more. I can confirm that this also happens with LibNews of (inactive) objects, LibLoaded or not. Edit: I was wrong. The crash occurs WHEN LOADING objects that were freed once or more.
Member

Added subscriber: @brita

Added subscriber: @brita
Mitchell Stokes was assigned by Inês Almeida 2014-06-27 22:55:40 +02:00

Had another look at this. This may be related to #40924 because Blender only crashes if the LibLoaded object has a material.
LibLoad_LibFree_material_bug.zip

Had another look at this. This may be related to #40924 because Blender only crashes if the LibLoaded object has a material. [LibLoad_LibFree_material_bug.zip](https://archive.blender.org/developer/F96723/LibLoad_LibFree_material_bug.zip)

Added subscriber: @Moguri

Added subscriber: @Moguri

Added subscriber: @mobious

Added subscriber: @mobious

The same problem occurs when using LibNew instead of LibLoad. As you can see in this file, it the crash occurs even if you load and free a different object each time. All that seems to matter is that the loaded object is using a material.
crash.blend
For me, the crash occurs on the second call to LibFree.

The same problem occurs when using LibNew instead of LibLoad. As you can see in this file, it the crash occurs even if you load and free a different object each time. All that seems to matter is that the loaded object is using a material. [crash.blend](https://archive.blender.org/developer/F115762/crash.blend) For me, the crash occurs on the second call to LibFree.

Added subscriber: @pgi

Added subscriber: @pgi

Well, I may have find an issue. It may even be the bug - who knows.
Disabling material caching prevents the crash.
My wild wild guess right now is that the pointer to the material in m_polymat_cache (KX_BlenderSceneConverter.cpp) is not released, removed, destroyed or whatever - I'm being technical here - but the pointed block is freed by LibFree (KX_BlenderSceneConverter::FreeBlendFile, perhaps :1371)
Things go on perfectly fine for a while, until the pointed block is actually recycled by the memory manager - or the name this thing has in C++.
When that happens, BANG!, the == operator in RAS_IPolyMaterial starts reading funny values and ultimately SIGSEGVs.

I'll try to see if I'm right (I'm like 50% sure about this)

Well, I may have find an issue. It may even be the bug - who knows. Disabling material caching prevents the crash. My wild wild guess right now is that the pointer to the material in m_polymat_cache (KX_BlenderSceneConverter.cpp) is not released, removed, destroyed or whatever - I'm being technical here - but the pointed block is freed by LibFree (KX_BlenderSceneConverter::FreeBlendFile, perhaps :1371) Things go on perfectly fine for a while, until the pointed block is actually recycled by the memory manager - or the name this thing has in C++. When that happens, BANG!, the == operator in RAS_IPolyMaterial starts reading funny values and ultimately SIGSEGVs. I'll try to see if I'm right (I'm like 50% sure about this)

I'm 99.9% positive on a material caching issue here. But it's a very long story.

I'm 99.9% positive on a material caching issue here. But it's a very long story.

Added subscriber: @arielvb

Added subscriber: @arielvb
Author

This issue was referenced by 377822729c

This issue was referenced by 377822729cbf48d86d46f7efbae0c0e3fbeba99f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @JohnDramor

Added subscriber: @JohnDramor

Im diagnos random bug on complex scenes when libfree(). Be solve review i-- in unregister action, because unlimited loop and freezing game.
My worked sample:

		/* Now unregister actions */
			CTR_Map<STR_HashedString, void *> &mapStringToActions = scene->GetLogicManager()->GetActionMap();
			printf( " -mapStringToActions.size() start %i \n", mapStringToActions.size());
			for (int i = 0; i < mapStringToActions.size(); i++) 
			{
				ID *action = (ID*) *mapStringToActions.at(i);
				printf( " -ID *action i scene %i %i \n", mapStringToActions.size(), i);
				if (IS_TAGGED(action)) 
				{
					STR_HashedString an = action->name + 2;
					mapStringToActions.remove(an);
					m_map_blender_to_gameAdtList.remove(CHashedPtr(action));
					printf( " -BUG tagged action i %i \n", i);
					//i--;
				}
			}
			printf( " -check here bug action unregister end....... %s \n", scene->GetName());
Im diagnos random bug on complex scenes when libfree(). Be solve review i-- in unregister action, because unlimited loop and freezing game. My worked sample: ``` /* Now unregister actions */ CTR_Map<STR_HashedString, void *> &mapStringToActions = scene->GetLogicManager()->GetActionMap(); printf( " -mapStringToActions.size() start %i \n", mapStringToActions.size()); for (int i = 0; i < mapStringToActions.size(); i++) { ID *action = (ID*) *mapStringToActions.at(i); printf( " -ID *action i scene %i %i \n", mapStringToActions.size(), i); if (IS_TAGGED(action)) { STR_HashedString an = action->name + 2; mapStringToActions.remove(an); m_map_blender_to_gameAdtList.remove(CHashedPtr(action)); printf( " -BUG tagged action i %i \n", i); //i--; } } printf( " -check here bug action unregister end....... %s \n", scene->GetName()); ```
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40555
No description provided.